# afs

./: Cargo.toml  README.md  docker-compose.bench.yml
.github/workflows/: ci.yml  release.yml
.sqlx/: query-0df20ab0b25c82d7acdbcf34413c00fc087f48bec2fafc1b767715419473b19c.json  query-238e785a72cf0d423c456855f5f5ebaed48d792ad395afb59400e1d61660e20e.json  query-2a44487f48b6eb670a80532f563f506b7dfc02e4b883ec164faadfab953a28af.json  query-3d930cacf315d79a64150a9c60427633c5278666c31d402ee0d1eb691c99b67e.json  query-69cda3df85284a883cefa7331549cd88abd22781d36709f0bfc2c6a65724c03f.json  query-775a388856524956c78a1ec1ff52b5702dc5ae676b2010cc5b9d4a25037d4332.json  query-96b6af5257faa8a24aa8b9c5635f0237e6d2a878702b1106847dc98b596777dc.json  query-a9830eb84a3975d257dc52d2b3df07ade4440a8dbc7bf4e5606f50786fe1bd7e.json  query-af163d39bc52ceeafd5ec4166e303c32ea8cbbb26cd9146b9078aa310637ab88.json  query-bfbb93edd6784f2a57ca22fcaac50507f16b5b797800935e54c95f7fa4c5374e.json  query-c62f052902653f2830e2f069f2d2a7d6c8b4147f8ec9761f22425e9e9df6a0d3.json  query-d643a91498acf3f72ac4092720d1a2afe4f3c582e307d243ef3d14bef5660c82.json  query-da1a9e64064fad7ec0e195fdd0300e6e4081a2dee9d9fb327568d5d5c4d85aae.json  query-deeb918dd544b564d7559d6b7d93cc1819ecea24e06dab06b3b0b728758a90e1.json  query-e52289ccdcb1d8a8c5c06ce34bf8c106fcb8142e70a460cf4c89107de28e152f.json  query-fac17fd508452a909de37ccc7feeb7b052a17b94bf1f614a53f12a51787c3058.json  query-fe71238f8d5c82dfb95a9124186160cb82e00bfd61d3e71bdf02310bc9b7ecc4.json
crates/afs/: Cargo.toml
crates/afs/src/: config.rs  main.rs
crates/db/: Cargo.toml
crates/db/migrations/: 0001_initial.sql
crates/db/src/: lib.rs  nodes.rs  packs.rs  schema.rs
crates/fuse/: Cargo.toml
crates/fuse/src/: fs.rs  inode.rs  lib.rs
crates/git-remote/: Cargo.toml
crates/git-remote/src/: main.rs  refs.rs  transport.rs
crates/git-remote/tests/: e2e.rs
crates/hydrator/: Cargo.toml
crates/hydrator/src/: lib.rs  queue.rs  worker.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: lfs_scan.rs  lib.rs  tree.rs  watcher.rs
crates/lfs-transfer/: Cargo.toml
crates/lfs-transfer/src/: main.rs
crates/resolver/: Cargo.toml
crates/resolver/src/: lib.rs  merged.rs  overlay.rs  snapshot.rs
crates/store/: Cargo.toml
crates/store/src/: backend.rs  cache.rs  lfs.rs  lib.rs  pack.rs
crates/tests/: Cargo.toml
crates/tests/benches/: store_backend.rs
crates/tests/src/: lib.rs
crates/tests/tests/: coverage_gaps.rs  db_roundtrip.rs  fuse_e2e.rs  fuse_logic.rs  hydrator_behavior.rs  inode_table.rs  lfs_batch_api.rs  lfs_storage.rs  overlay_behavior.rs  pack_store_pipeline.rs  remaining_gaps.rs  tree_indexing.rs  watcher_detection.rs
crates/volume-plugin/: Cargo.toml
crates/volume-plugin/src/: handler.rs  main.rs  state.rs
