[package]
name = "afs-fuse"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
afs-db.workspace = true
afs-resolver.workspace = true
afs-hydrator.workspace = true
afs-store.workspace = true

fuser.workspace = true
gix.workspace = true
tokio.workspace = true
tracing.workspace = true
bytes.workspace = true
anyhow.workspace = true
thiserror.workspace = true
libc = "0.2"
