[package]
name = "git-remote-afs"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "git-remote-afs"
path = "src/main.rs"

[dependencies]
# Only need backend config + operator creation from afs-store (no SQLite)
afs-store.workspace = true

tokio.workspace = true
opendal.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
sha2.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
