[package]
name = "afs-tests"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]

[dev-dependencies]
afs-db.workspace = true
afs-fuse.workspace = true
afs-store.workspace = true
afs-resolver.workspace = true
afs-indexer.workspace = true
afs-hydrator.workspace = true
tokio.workspace = true
tempfile.workspace = true
sqlx.workspace = true
fuser.workspace = true
opendal.workspace = true
serial_test = "3"
bytes.workspace = true
anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json = "1"
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }
rand = "0.8"
futures.workspace = true
sha2.workspace = true

[[bench]]
name = "store_backend"
harness = false
