[package]
name = "afs-volume-plugin"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "afs-volume-plugin"
path = "src/main.rs"

[dependencies]
afs-db.workspace = true
afs-fuse.workspace = true
afs-hydrator.workspace = true
afs-indexer.workspace = true
afs-resolver.workspace = true
afs-store.workspace = true

tokio = { workspace = true, features = ["full", "net"] }
axum.workspace = true
hyper-util.workspace = true
tower.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
dashmap.workspace = true
toml.workspace = true
anyhow.workspace = true
fuser.workspace = true
sqlx.workspace = true
